# NonogramSolver

./: Cargo.toml  index.html  modules.js  solver-test1.py
pkg/: README.md  package.json  picross_solver.d.ts  picross_solver.js  picross_solver_bg.wasm  picross_solver_bg.wasm.d.ts
src/: lib.rs
static/: style.css
