[package]
name = "picross_solver"
version = "0.1.0"
edition = "2024"
description = "A solver library for Picross (Nonogram) puzzles, compiled to WebAssembly."
repository = "https://github.com/Nagatani/NonogramSolver"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
lto = true
opt-level = "s"